--- a/package.json
+++ b/package.json
@@ -10,22 +10,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
+    "@angular/animations": "^18.1.3",
+    "@angular/cdk": "^18.1.3",
+    "@angular/common": "^18.1.3",
+    "@angular/compiler": "^18.1.3",
+    "@angular/core": "^18.1.3",
+    "@angular/forms": "^18.1.3",
+    "@angular/platform-browser": "^18.1.3",
+    "@angular/platform-browser-dynamic": "^18.1.3",
+    "@angular/router": "^18.1.3",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/lucide": "^26.3.0",
+    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-alertdialog-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-avatar-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-checkbox-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-collapsible-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-command-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-core": "^0.0.1-alpha.353",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-hovercard-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-label-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-menu-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-popover-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-progress-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-radiogroup-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-select-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-separator-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-sheet-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-switch-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-table-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-tabs-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-toggle-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-tooltip-brain": "0.0.1-alpha.353",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "embla-carousel-angular": "^14.0.0",
+    "ngx-scrollbar": "^13.0.1",
+    "ngx-sonner": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.0",
-    "@angular/cli": "^17.3.0",
-    "@angular/compiler-cli": "^17.3.0",
+    "@angular-devkit/build-angular": "^18.1.3",
+    "@angular/cli": "^18.1.3",
+    "@angular/compiler-cli": "^18.1.3",
     "@spartan-ng/cli": "^0.0.1-alpha.361",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
@@ -36,7 +66,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.40",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.7",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.4.2"
   }
 }
