Added toastr Added ngx highlight Added Routing to header Added code component Added copy code Added Quest service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,9 @@
       ],
       "@spartan-ng/ui-button-helm": [
         ".\\libs/ui/ui-button-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-scrollarea-helm": [
+        ".\\libs/ui/ui-scrollarea-helm/src/index.ts"
       ]
     }
   },
