--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "embla-carousel-angular": "^14.0.0",
+    "highlight.js": "^11.10.0",
+    "ngx-highlightjs": "^12.0.0",
     "ngx-scrollbar": "^13.0.1",
     "ngx-sonner": "^2.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
