--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ngx-sonner": "^2.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
