--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.3",
-    "@angular/cdk": "^18.1.3",
+    "@angular/cdk": "^18.1.4",
     "@angular/common": "^18.1.3",
     "@angular/compiler": "^18.1.3",
     "@angular/core": "^18.1.3",
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "embla-carousel-angular": "^14.0.0",
+    "fuse.js": "^7.0.0",
     "highlight.js": "^11.10.0",
     "ngx-highlightjs": "^12.0.0",
     "ngx-scrollbar": "^13.0.1",
