--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^18.0.0",
     "@angular/animations": "^18.1.3",
     "@angular/cdk": "^18.1.4",
     "@angular/common": "^18.1.3",
